# scoping_v2

./: .gitignore  README.md  pyproject.toml
scoping_v2/src/: abstract_groundings.py  atomic_classes.py  enumerated_operator_level_groundings.py  enumerated_operators_like_og_scoping.py  scoping.py
